# MasterThesis_TTCT_LLMs

./: .gitignore  README.md  automation.env.example  evaluation_instruction.txt  pyproject.toml  run_bench.py
Data_Analytics/: .Rhistory  Analytics_Extended.R  DB_Test.R  Figures.R  Tables.R  Test.R  analytics.R  judge_reliability-ICC.R  judge_reliability.R
Eval_Prompts/: elaboration.txt  flexibility.txt  fluency.txt  originality.txt
PromptEngine/: anthropic_store.py  anthropic_test.py  core_store.py  deepseek_store.py  deepseek_test.py  gemini_store.py  gemini_test.py  get_prompt.py  openAI_store.py  openAI_test.py
scripts/: calculate_fluency.py  evaluate_requests.py  idea_dedup_clustering.py  idea_dedup_embedding.py  idea_dedup_mysql.py  idea_dedup_pgvector.py  idea_saturation.py  idea_saturation_embeddings.py  run_bench.py
src/: database.py
support_tools/: ideas_sync.py  separate_ideas.py
thesis_tables/: Judge_Reliability.csv  appendix_token_summary.csv  llm2_test.csv  model_cost_effectiveness.rds  model_lmm_semantic_dispersion.rds  model_lmm_ttct.rds  model_nb_elaboration.rds  model_nb_flexibility.rds  model_nb_fluency.rds  saturation_breakpoints_summary.csv  tbl_anova_semantic_dispersion.csv  tbl_anova_ttct.csv  tbl_bland_altman_stats.csv  tbl_coefficients_elaboration.csv  tbl_coefficients_fluency.csv  tbl_coefficients_semantic_dispersion.csv  tbl_cost_effectiveness.csv  tbl_cost_example_sentence_output_only.csv  tbl_cost_for_1000_ttct_output_only.csv  tbl_delta_rho_loa.csv  tbl_dunn_test_diversity.csv  tbl_icc_summary.csv  tbl_judge_reliability_summary.csv  (+12 more)
(+22 files in other folders)
